--- a/public/list.html
+++ b/public/list.html
@@ -3,137 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Welcome to the Great Outdoors!</title>
+    <link rel="stylesheet" type="text/css" href="styles/list.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=National+Park:wght@200..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Slab:wght@100..900&display=swap"
         rel="stylesheet">
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        :root {
-            --background-color: #e0d6c4;
-            --foreground-color: #332222;
-            --radius: 6px;
-            --font-header: 'Roboto Slab', Georgia, 'Times New Roman', Times, serif;
-            --font-body: 'Nunito', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            --font-info: 'National Park' sans-serif;
-            font-size: 18px;
-        }
-
-        body {
-            font-family: var(--font-body);
-            font-size: 18px;
-            background-color: darkslategray;
-            color: var(--foreground-color);
-            padding-top: 8px;
-        }
-
-        .app {
-            max-width: 8.5in;
-            width: 100%;
-            min-height: 11in;
-            margin: auto;
-            padding: 1in;
-            margin-top: 0.25px;
-            border-radius: var(--radius);
-            background-color: var(--background-color);
-            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        }
-
-
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            font-family: 'Roboto Slab', Georgia, 'Times New Roman', Times, serif
-        }
-
-        h1 {
-            font-size: 64px;
-            margin-top: 0;
-        }
-
-        h2.title {
-            font-size: 42px;
-            font-weight: 600;
-            margin-top: -8px;
-            margin-bottom: 2px;
-        }
-
-        h2.info-title {
-            margin-top: 32px;
-            margin-bottom: 2px;
-        }
-
-        h1 img.skill {
-            max-height: 0.7em;
-        }
-
-        img.hero {
-            max-width: 100%;
-            max-height: 75vh;
-            border: 2px solid#322;
-            border-radius: 8px;
-        }
-
-        img.info {
-            margin-right: 4px;
-            background-color: #322;
-            border-radius: 4px;
-            width: 22px;
-            height: 22px;
-        }
-
-        img.info.skill {
-            background-color: transparent;
-            border-radius: 0;
-        }
-
-        p.body {
-            margin-top: 30px;
-        }
-
-        div.stats {
-            font-family: 'National Park';
-            font-weight: 600;
-            font-size: 18px;
-            display: flex;
-            align-items: center;
-        }
-
-        div.stats span:not(:first-child) {
-            margin-left: 2px;
-        }
-
-        a.trail {
-            text-decoration: none;
-            color: inherit;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            margin-top: 4px;
-            margin-bottom: 4px;
-            border-top: 2px dashed rgba(12, 12, 12, 0.5);
-            padding: 16px 2px;
-        }
-
-        .trail .trailicon {
-            width: 80px;
-            height: 80px;
-            border-radius: 6px;
-            margin-right: 12px;
-            background-color: gray;
-            background-size: cover;
-            background-position: center;
-            background-image: url(https://placehold.co/200x200?text=?);
-            border: 1px solid darkgrey;
-        }
-    </style>
 </head>
 
 <body>
