--- a/public/list.html
+++ b/public/list.html
@@ -16,186 +16,76 @@
 <body>
     <div class="app">
     <h1>Trail List</h1>
-    <a class="trail" href="trails/5040.html">
-        <div class="trailicon" style="background-image: url(https://placehold.co/64x64?text=?)"></div>
-        <div class="trailtext">
-            <h2 class="title">
-                <span>Trail Name 1</span>
-            </h2>
-            <div class="stats">
-                <img class="info" title="trailhead" alt="trailhead"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
-                <img class="info" title="campsite" alt="campsite"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
-                <img class="info" title="bear" alt="bear"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
-                <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
-                <span>5.2mi | 3,260ft</span>
+    <div class="list">
+        <a class="trail" href="trails/5040.html">
+            <div class="trailicon" style="background-image: url(https://www.seattle.gov/images//images/Departments/ParksAndRecreation/Parks/GreenLake/GreenLake4.jpg)"></div>
+            <div class="trailtext">
+                <h2 class="title">
+                    <span>Green Lake Loop</span>
+                </h2>
+                <div class="stats">
+                    <span>2.8mi | 0ft</span>
+                </div>
+                <div class="stats icons">
+                    <img class="info skill" title="skill" alt="skill" src="/images/icon/easy.svg">
+                    <img class="info" title="wheelchair" alt="wheelchair"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/wheelchair-accessible-white-18.svg">
+                    <img class="info" title="parking" alt="parking"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
+                    <img class="info" title="bicycles" alt="bicycles"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bicycle-trail-white-18.svg">
+                    <img class="info" title="beaches" alt="beaches"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/beach-access-white-18.svg">
+                    <img class="info" title="kayaks" alt="kayaks"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/canoe-access-white-18.svg">
+                </div>
             </div>
-        </div>
-    </a>
-    <a class="trail" href="trails/5040.html">
-        <div class="trailicon" style="background-image: url(https://placehold.co/64x64?text=?)"></div>
-        <div class="trailtext">
-            <h2 class="title">
-                <span>Trail Name 2</span>
-            </h2>
-            <div class="stats">
-                <img class="info" title="trailhead" alt="trailhead"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
-                <img class="info" title="campsite" alt="campsite"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
-                <img class="info" title="bear" alt="bear"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
-                <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
-                <span>5.2mi | 3,260ft</span>
+        </a>
+        <a class="trail" href="trails/5040.html">
+            <div class="trailicon" style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Washington_Park_-_1.jpg/500px-Washington_Park_-_1.jpg)"></div>
+            <div class="trailtext">
+                <h2 class="title">
+                    <span>Washington Park Arboretum Loop</span>
+                </h2>
+                <div class="stats">
+                    <span>2.3mi | 147ft</span>
+                </div>
+                <div class="stats icons">
+                    <img class="info skill" title="skill" alt="skill" src="/images/icon/intermediate.svg">
+                    <img class="info" title="wheelchair" alt="wheelchair"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/wheelchair-accessible-white-18.svg">
+                    <img class="info" title="parking" alt="parking"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
+                    <img class="info" title="bicycles" alt="bicycles"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bicycle-trail-white-18.svg">
+                    <img class="info" title="flowers" alt="flowers"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/standalone/flower-viewing-white-14.svg">
+                    <img class="info" title="picnic" alt="picnic"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/picnic-area-white-18.svg">
+                </div>
             </div>
-        </div>
-    </a>
-    <a class="trail" href="trails/5040.html">
-        <div class="trailicon" style="background-image: url(https://placehold.co/64x64?text=?)"></div>
-        <div class="trailtext">
-            <h2 class="title">
-                <span>Trail Name 3</span>
-            </h2>
-            <div class="stats">
-                <img class="info" title="trailhead" alt="trailhead"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
-                <img class="info" title="campsite" alt="campsite"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
-                <img class="info" title="bear" alt="bear"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
-                <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
-                <span>5.2mi | 3,260ft</span>
+        </a>
+        <a class="trail" href="trails/5040.html">
+            <div class="trailicon" style="background-image: url(https://www.seattle.gov/images//images/Departments/ParksAndRecreation/Parks/DEF/DiscoveryPark-walking-near-lighthouse.jpg)"></div>
+            <div class="trailtext">
+                <h2 class="title">
+                    <span>Discovery Park Loop</span>
+                </h2>
+                <div class="stats">
+                    <span>4.4mi | 400ft</span>
+                </div>
+                <div class="stats icons">
+                    <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
+                    <img class="info" title="parking" alt="parking"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
+                    <img class="info" title="bicycles" alt="bicycles"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
+                    <img class="info" title="beaches" alt="beaches"
+                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/beach-access-white-18.svg">
+                </div>
             </div>
-        </div>
-    </a>
-    <a class="trail" href="trails/5040.html">
-        <div class="trailicon" style="background-image: url(https://placehold.co/64x64?text=?)"></div>
-        <div class="trailtext">
-            <h2 class="title">
-                <span>Trail Name 4</span>
-            </h2>
-            <div class="stats">
-                <img class="info" title="trailhead" alt="trailhead"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
-                <img class="info" title="campsite" alt="campsite"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
-                <img class="info" title="bear" alt="bear"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
-                <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
-                <span>5.2mi | 3,260ft</span>
-            </div>
-        </div>
-    </a>
-    <a class="trail" href="trails/5040.html">
-        <div class="trailicon" style="background-image: url(https://placehold.co/64x64?text=?)"></div>
-        <div class="trailtext">
-            <h2 class="title">
-                <span>Trail Name 5</span>
-            </h2>
-            <div class="stats">
-                <img class="info" title="trailhead" alt="trailhead"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
-                <img class="info" title="campsite" alt="campsite"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
-                <img class="info" title="bear" alt="bear"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
-                <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
-                <span>5.2mi | 3,260ft</span>
-            </div>
-        </div>
-    </a>
-    <a class="trail" href="trails/5040.html">
-        <div class="trailicon" style="background-image: url(https://placehold.co/64x64?text=?)"></div>
-        <div class="trailtext">
-            <h2 class="title">
-                <span>Trail Name 6</span>
-            </h2>
-            <div class="stats">
-                <img class="info" title="trailhead" alt="trailhead"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
-                <img class="info" title="campsite" alt="campsite"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
-                <img class="info" title="bear" alt="bear"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
-                <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
-                <span>5.2mi | 3,260ft</span>
-            </div>
-        </div>
-    </a>
-    <a class="trail" href="trails/5040.html">
-        <div class="trailicon" style="background-image: url(https://placehold.co/64x64?text=?)"></div>
-        <div class="trailtext">
-            <h2 class="title">
-                <span>Trail Name 7</span>
-            </h2>
-            <div class="stats">
-                <img class="info" title="trailhead" alt="trailhead"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
-                <img class="info" title="campsite" alt="campsite"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
-                <img class="info" title="bear" alt="bear"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
-                <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
-                <span>5.2mi | 3,260ft</span>
-            </div>
-        </div>
-    </a>
-    <a class="trail" href="trails/5040.html">
-        <div class="trailicon" style="background-image: url(https://placehold.co/64x64?text=?)"></div>
-        <div class="trailtext">
-            <h2 class="title">
-                <span>Trail Name 8</span>
-            </h2>
-            <div class="stats">
-                <img class="info" title="trailhead" alt="trailhead"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
-                <img class="info" title="campsite" alt="campsite"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
-                <img class="info" title="bear" alt="bear"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
-                <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
-                <span>5.2mi | 3,260ft</span>
-            </div>
-        </div>
-    </a>
-    <a class="trail" href="trails/5040.html">
-        <div class="trailicon" style="background-image: url(https://placehold.co/64x64?text=?)"></div>
-        <div class="trailtext">
-            <h2 class="title">
-                <span>Trail Name 9</span>
-            </h2>
-            <div class="stats">
-                <img class="info" title="trailhead" alt="trailhead"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
-                <img class="info" title="campsite" alt="campsite"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
-                <img class="info" title="bear" alt="bear"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
-                <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
-                <span>5.2mi | 3,260ft</span>
-            </div>
-        </div>
-    </a>
-    <a class="trail" href="trails/5040.html">
-        <div class="trailicon" style="background-image: url(https://placehold.co/64x64?text=?)"></div>
-        <div class="trailtext">
-            <h2 class="title">
-                <span>Trail Name 10</span>
-            </h2>
-            <div class="stats">
-                <img class="info" title="trailhead" alt="trailhead"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
-                <img class="info" title="campsite" alt="campsite"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
-                <img class="info" title="bear" alt="bear"
-                    src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
-                <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
-                <span>5.2mi | 3,260ft</span>
-            </div>
-        </div>
-    </a>
+        </a>
+    </div>
 </div>
 </body>
 
