--- a/public/list.html
+++ b/public/list.html
@@ -15,78 +15,177 @@
 
 <body>
     <div class="app">
-    <h1>Trail List</h1>
-    <div class="list">
-        <a class="trail" href="trails/5040.html">
-            <div class="trailicon" style="background-image: url(https://www.seattle.gov/images//images/Departments/ParksAndRecreation/Parks/GreenLake/GreenLake4.jpg)"></div>
-            <div class="trailtext">
-                <h2 class="title">
-                    <span>Green Lake Loop</span>
-                </h2>
-                <div class="stats">
-                    <span>2.8mi | 0ft</span>
+        <h1>Trail List</h1>
+        <div class="list">
+            <a class="trail" href="trails/green_lake.html">
+                <div class="trailicon" style="background-image: url(/images/GreenLake4.jpg)"></div>
+                <div class="trailtext">
+                    <h2 class="title">
+                        <span>Green Lake Loop</span>
+                    </h2>
+                    <div class="stats">
+                        <span>2.8mi | 0ft</span>
+                    </div>
+                    <div class="stats icons">
+                        <img class="info skill" title="skill" alt="skill" src="/images/icon/easy.svg">
+                        <img class="info" title="wheelchair" alt="wheelchair"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/wheelchair-accessible-white-18.svg">
+                        <img class="info" title="parking" alt="parking"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
+                        <img class="info" title="bicycles" alt="bicycles"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bicycle-trail-white-18.svg">
+                        <img class="info" title="beaches" alt="beaches"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/beach-access-white-18.svg">
+                        <img class="info" title="kayaks" alt="kayaks"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/canoe-access-white-18.svg">
+                    </div>
                 </div>
-                <div class="stats icons">
-                    <img class="info skill" title="skill" alt="skill" src="/images/icon/easy.svg">
-                    <img class="info" title="wheelchair" alt="wheelchair"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/wheelchair-accessible-white-18.svg">
-                    <img class="info" title="parking" alt="parking"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
-                    <img class="info" title="bicycles" alt="bicycles"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bicycle-trail-white-18.svg">
-                    <img class="info" title="beaches" alt="beaches"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/beach-access-white-18.svg">
-                    <img class="info" title="kayaks" alt="kayaks"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/canoe-access-white-18.svg">
+            </a>
+            <a class="trail" href="trails/arboretum.html">
+                <div class="trailicon" style="background-image: url(/images/Arboretum.jpg)"></div>
+                <div class="trailtext">
+                    <h2 class="title">
+                        <span>Washington Park Arboretum</span>
+                    </h2>
+                    <div class="stats">
+                        <span>2.3mi | 147ft</span>
+                    </div>
+                    <div class="stats icons">
+                        <img class="info skill" title="skill" alt="skill" src="/images/icon/easy.svg">
+                        <img class="info" title="wheelchair" alt="wheelchair"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/wheelchair-accessible-white-18.svg">
+                        <img class="info" title="parking" alt="parking"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
+                        <img class="info" title="bicycles" alt="bicycles"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bicycle-trail-white-18.svg">
+                        <img class="info" title="flowers" alt="flowers"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/standalone/flower-viewing-white-14.svg">
+                        <img class="info" title="picnic" alt="picnic"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/picnic-area-white-18.svg">
+                    </div>
                 </div>
-            </div>
-        </a>
-        <a class="trail" href="trails/5040.html">
-            <div class="trailicon" style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Washington_Park_-_1.jpg/500px-Washington_Park_-_1.jpg)"></div>
-            <div class="trailtext">
-                <h2 class="title">
-                    <span>Washington Park Arboretum Loop</span>
-                </h2>
-                <div class="stats">
-                    <span>2.3mi | 147ft</span>
+            </a>
+            <a class="trail" href="trails/discovery.html">
+                <div class="trailicon" style="background-image: url(/images/DiscoveryPark.jpg)"></div>
+                <div class="trailtext">
+                    <h2 class="title">
+                        <span>Discovery Park Loop</span>
+                    </h2>
+                    <div class="stats">
+                        <span>4.4mi | 400ft</span>
+                    </div>
+                    <div class="stats icons">
+                        <img class="info skill" title="skill" alt="skill" src="/images/icon/easy.svg">
+                        <img class="info" title="parking" alt="parking"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
+                        <img class="info" title="hiking" alt="hiking"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
+                        <img class="info" title="beaches" alt="beaches"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/beach-access-white-18.svg">
+                    </div>
                 </div>
-                <div class="stats icons">
-                    <img class="info skill" title="skill" alt="skill" src="/images/icon/intermediate.svg">
-                    <img class="info" title="wheelchair" alt="wheelchair"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/wheelchair-accessible-white-18.svg">
-                    <img class="info" title="parking" alt="parking"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
-                    <img class="info" title="bicycles" alt="bicycles"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bicycle-trail-white-18.svg">
-                    <img class="info" title="flowers" alt="flowers"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/standalone/flower-viewing-white-14.svg">
-                    <img class="info" title="picnic" alt="picnic"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/picnic-area-white-18.svg">
+            </a>
+            <a class="trail" href="trails/snowlake.html">
+                <div class="trailicon" style="background-image: url(/images/SnowLake.jpg)"></div>
+                <div class="trailtext">
+                    <h2 class="title">
+                        <span>Snow Lake Trail</span>
+                    </h2>
+                    <div class="stats">
+                        <span>5.7mi | 1000ft</span>
+                    </div>
+                    <div class="stats icons">
+                        <img class="info skill" title="skill" alt="skill" src="/images/icon/intermediate.svg">
+                        <img class="info" title="parking" alt="parking"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
+                        <img class="info" title="hiking" alt="hiking"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
+                        <img class="info" title="beaches" alt="beaches"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/beach-access-white-18.svg">
+                    </div>
                 </div>
-            </div>
-        </a>
-        <a class="trail" href="trails/5040.html">
-            <div class="trailicon" style="background-image: url(https://www.seattle.gov/images//images/Departments/ParksAndRecreation/Parks/DEF/DiscoveryPark-walking-near-lighthouse.jpg)"></div>
-            <div class="trailtext">
-                <h2 class="title">
-                    <span>Discovery Park Loop</span>
-                </h2>
-                <div class="stats">
-                    <span>4.4mi | 400ft</span>
+            </a>
+            <a class="trail" href="trails/si.html">
+                <div class="trailicon" style="background-image: url(/images/MtSi.jpg)"></div>
+                <div class="trailtext">
+                    <h2 class="title">
+                        <span>Mt. Si Trail</span>
+                    </h2>
+                    <div class="stats">
+                        <span>8.0mi, 1000ft</span>
+                    </div>
+                    <div class="stats icons">
+                        <img class="info skill" title="skill" alt="skill" src="/images/icon/intermediate.svg">
+                        <img class="info" title="parking" alt="parking"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
+                        <img class="info" title="hiking" alt="hiking"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
+                    </div>
                 </div>
-                <div class="stats icons">
-                    <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
-                    <img class="info" title="parking" alt="parking"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
-                    <img class="info" title="bicycles" alt="bicycles"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
-                    <img class="info" title="beaches" alt="beaches"
-                        src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/beach-access-white-18.svg">
+            </a>
+            <a class="trail" href="trails/margeret.html">
+                <div class="trailicon" style="background-image: url(/images/Margeret.jpg)"></div>
+                <div class="trailtext">
+                    <h2 class="title">
+                        <span>Mt. Margaret</span>
+                    </h2>
+                    <div class="stats">
+                        <span>11.0mi, 2820ft</span>
+                    </div>
+                    <div class="stats icons">
+                        <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
+                        <img class="info" title="parking" alt="parking"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/parking-white-18.svg">
+                        <img class="info" title="hiking" alt="hiking"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
+                        <img class="info" title="camping" alt="camping"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
+                    </div>
                 </div>
-            </div>
-        </a>
+            </a>
+            <a class="trail" href="trails/5040.html">
+                <div class="trailicon" style="background-image: url(/images/5040.jpg)"></div>
+                <div class="trailtext">
+                    <h2 class="title">
+                        <span>5040 Peak</span>
+                    </h2>
+                    <div class="stats">
+                        <span>5.2mi | 3,260ft</span>
+                    </div>
+                    <div class="stats icons">
+                        <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
+                        <img class="info" title="trailhead" alt="trailhead"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
+                        <img class="info" title="campsite" alt="campsite"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
+                        <img class="info" title="bear" alt="bear"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
+                    </div>
+                </div>
+            </a>
+            <a class="trail" href="trails/celeste.html">
+                <div class="trailicon" style="background-image: url(/images/Celeste.jpg)"></div>
+                <div class="trailtext">
+                    <h2 class="title">
+                        <span>Comox Glacier (Celeste)</span>
+                    </h2>
+                    <div class="stats">
+                        <span>11.2mi | 5,731ft</span>
+                    </div>
+                    <div class="stats icons">
+                        <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
+                        <img class="info skill" title="skill" alt="skill" src="/images/icon/advanced.svg">
+                        <img class="info" title="trailhead" alt="trailhead"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/trailhead-white-18.svg">
+                        <img class="info" title="campsite" alt="campsite"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/campsite-white-18.svg">
+                        <img class="info" title="bear" alt="bear"
+                            src="https://raw.githubusercontent.com/nationalparkservice/symbol-library/refs/heads/gh-pages/src/npmap-builder/bear-white-18.svg">
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
-</div>
 </body>
 
 </html>
