Add clubs and do final polish

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Welcome to the Great Outdoors!</title>
-    <link rel="stylesheet" type="text/css" href="styles/toplevel.css">
+    <link rel="stylesheet" type="text/css" href="/styles/toplevel.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=National+Park:wght@200..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
@@ -16,11 +16,12 @@
 
     <div class="app mainpage">
         <img class="herologo" src="/images/logo.png" alt="Great Outdoors" onmouseover="showAlt(this)" onmouseout="hideAlt(this)">
-        <h1>Your Adventure Awaits!</h1>
+        <h1 class="title">Your Adventure Awaits!</h1>
 
         <div class="btnstack mainpage">
             <a class="btn" href="getting_started.html">Getting Started</a>
             <a class="btn" href="equipment.html">Useful Equipment</a>
+            <a class="btn" href="clubs.html">Hiking Clubs</a>
             <a class="btn" href="list.html">Trail List</a>
         </div>
     </div>
