--- a/public/equipment.html
+++ b/public/equipment.html
@@ -4,160 +4,99 @@
 <head>
     <meta charset="UTF-8">
     <title>Equipment</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="/styles/branchlevel.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=National+Park:wght@200..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Slab:wght@100..900&display=swap"
         rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Nunito', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-size: 18px;
-            width: 6.5in;
-            margin: auto;
-            background-color: #e0d6c4;
-            color: #322;
-            padding-top: 8px;
-        }
-
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            font-family: 'Roboto Slab', Georgia, 'Times New Roman', Times, serif
-        }
-
-        h1.title {
-            font-size: 56px;
-            font-weight: 600;
-            margin-top: 32px;
-            margin-bottom: 2px;
-        }
-
-        h2.info-title {
-            margin-top: 32px;
-            margin-bottom: 2px;
-        }
-
-        h1 img.skill {
-            max-height: 0.7em;
-        }
-
-        img.hero {
-            max-width: 100%;
-            max-height: 75vh;
-            border: 2px solid#322;
-            border-radius: 8px;
-        }
-
-        img.info {
-            margin-right: 4px;
-            background-color: #322;
-            border-radius: 4px;
-            width: 22px;
-            height: 22px;
-        }
-
-        img.info.skill {
-            background-color: transparent;
-            border-radius: 0;
-        }
-
-        p.body {
-            margin-top: 30px;
-        }
-
-        div.stats {
-            font-family: 'National Park';
-            font-weight: 600;
-            font-size: 18px;
-            display: flex;
-            align-items: center;
-        }
-
-        div.stats span:not(:first-child) {
-            margin-left: 2px;
-        }
-    </style>
 </head>
 
 <body>
-    <h1>Hiking Equipment List</h1>
-    <h2>Basic Clothes</h2>
-    <h3>Warm/Dry Weather Basic Clothes</h3>
-    <p>
-        <b>Footwear:</b> A well-fitting pair of hiking boots, keep trying different styles until you find a pair you
-        like. And padded socks, try to find ones that are not meant for cold weather. Look up different lacing
-        techniques to find one that works best for you.
-        <br>
-        <b>Base layer:</b> A decent T-shirt and shorts, cargo/jean shorts are recommended.
-        <br>
-        <b>Headwear:</b> Something to block the sun, like a baseball or sun hat. A cowboy hat also works.
-    </p>
+    <div class="app">
+        <h1>Hiking Equipment List</h1>
+        <h2>Basic Clothes</h2>
+        <h3>Warm/Dry Weather Basic Clothes</h3>
+        <p>
+            <b>Footwear:</b> A well-fitting pair of hiking boots, keep trying different styles until you find a pair you
+            like. And padded socks, try to find ones that are not meant for cold weather. Look up different lacing
+            techniques to find one that works best for you.
+            <br>
+            <b>Base layer:</b> A decent T-shirt and shorts, cargo/jean shorts are recommended.
+            <br>
+            <b>Headwear:</b> Something to block the sun, like a baseball or sun hat. A cowboy hat also works.
+        </p>
 
-    <h3>Cold/Wet Weather Basic Clothes</h3>
-    <p>
-        <b>Base layer:</b> long underwear, pants, and long-sleeve shirt.
-        <br>
-        <b>Warmer layer:</b> Some sort of hoodie/jacket to insulate yourself. If you think you might need it, stick it
-        in your pack
-        just in case.
-        <br>
-        <b>Waterproof layer:</b> A raincoat/windbreaker combo would be best, but just waterproof will do fine. As well
-        as a pair of rain pants to keep your legs protected from the wet. Same as the warmer layer, if you think you
-        might need it, stick it in your pack.
-        <br>
-        <b>Footwear:</b> A good pair of hiking boots, along with special hiking socks. They have extra padding to
-        prevent blisters, and they keep your feet warm in cold weather.
-    </p>
-
-
-    <h2>Basic Gear</h2>
-    <h3>Universal/Day Hiking Gear</h3>
-    <p>
-        <b>Backpack:</b> Since you will be traveling along many miles of trails, you will want a light pack, (Light
-        pack,
-        meaning the bag itself is light), because the things you pack will be heavier than you expect after 3+ miles of
-        trail.
-        <br>
-        <b>Navigation:</b> A GPS, your phone, or a classic map and compass will get you through.
-        <br>
-        <b>Sun protection:</b> A hat and sunscreen will do.
-        <br>
-        <b>First Aid:</b> A first aid kit from amazon is good, consult a first aid guide to make sure you are stocked
-        properly.
-        <br>
-        <b>Nutrition:</b> Have a few snacks of your choice on hand.
-        <br>
-        <b>Hydration:</b> Have a decent sized water bottle, 32-40oz is standard.
-    </p>
+        <h3>Cold/Wet Weather Basic Clothes</h3>
+        <p>
+            <b>Base layer:</b> long underwear, pants, and long-sleeve shirt.
+            <br>
+            <b>Warmer layer:</b> Some sort of hoodie/jacket to insulate yourself. If you think you might need it, stick
+            it
+            in your pack
+            just in case.
+            <br>
+            <b>Waterproof layer:</b> A raincoat/windbreaker combo would be best, but just waterproof will do fine. As
+            well
+            as a pair of rain pants to keep your legs protected from the wet. Same as the warmer layer, if you think you
+            might need it, stick it in your pack.
+            <br>
+            <b>Footwear:</b> A good pair of hiking boots, along with special hiking socks. They have extra padding to
+            prevent blisters, and they keep your feet warm in cold weather.
+        </p>
 
 
-    <h3>Overnight/Backpacking gear</h3>
-    <p>
-        <b>Illumination:</b> For if you plan to hike at night, you will need a source of light to see the trail, as well
-        as spare batteries.
-        <br>
-        <b>Insulation:</b> This is where you would put your warmer clothes in your pack for when the temperature drops
-        at night, depending on how cold you expect the night to be, or even some additional clothes like gloves or a
-        scarf.
-        <br>
-        <b>Fire starter:</b> For emergency fire lighting purposes, cooking and warming up. A flint and steel set will
-        do.
-        <br>
-        <b>Collapsable shelter</b> To keep the elements out at night, also in case everything goes wrong. There are
-        compact, lightweight shelters available that will fit in your bag
-    </p>
+        <h2>Basic Gear</h2>
+        <h3>Universal/Day Hiking Gear</h3>
+        <p>
+            <b>Backpack:</b> Since you will be traveling along many miles of trails, you will want a light pack, (Light
+            pack,
+            meaning the bag itself is light), because the things you pack will be heavier than you expect after 3+ miles
+            of
+            trail.
+            <br>
+            <b>Navigation:</b> A GPS, your phone, or a classic map and compass will get you through.
+            <br>
+            <b>Sun protection:</b> A hat and sunscreen will do.
+            <br>
+            <b>First Aid:</b> A first aid kit from amazon is good, consult a first aid guide to make sure you are
+            stocked
+            properly.
+            <br>
+            <b>Nutrition:</b> Have a few snacks of your choice on hand.
+            <br>
+            <b>Hydration:</b> Have a decent sized water bottle, 32-40oz is standard.
+        </p>
 
 
-    <h2>Extra equipment</h2>
-    <p>
-        These pieces of equipment are not make-or-break, but they are nice to have.<br>
-        Bug spray, watch, emergency blanket, duct tape, gloves, trekking poles for steep ascents/descents, extra socks,
-        whistle, and if you are hiking during hunting season, wear an orange vest.
-        <br><br>
+        <h3>Overnight/Backpacking gear</h3>
+        <p>
+            <b>Illumination:</b> For if you plan to hike at night, you will need a source of light to see the trail, as
+            well
+            as spare batteries.
+            <br>
+            <b>Insulation:</b> This is where you would put your warmer clothes in your pack for when the temperature
+            drops
+            at night, depending on how cold you expect the night to be, or even some additional clothes like gloves or a
+            scarf.
+            <br>
+            <b>Fire starter:</b> For emergency fire lighting purposes, cooking and warming up. A flint and steel set
+            will
+            do.
+            <br>
+            <b>Collapsable shelter</b> To keep the elements out at night, also in case everything goes wrong. There are
+            compact, lightweight shelters available that will fit in your bag
+        </p>
+
+
+        <h2>Extra equipment</h2>
+        <p>
+            These pieces of equipment are not make-or-break, but they are nice to have.<br>
+            Bug spray, watch, emergency blanket, duct tape, gloves, trekking poles for steep ascents/descents, extra
+            socks,
+            whistle, and if you are hiking during hunting season, wear an orange vest.
+            <br><br>
         <h3>Bear/Wildlife Country</h3>
         For when you are in Bear Country, or just generally around wildlife, carry Bear spray or Pepper spray if you
         can't get Bear spray, and make sure to train yourself to use it effectively. An airhorn can be effective in
@@ -169,7 +108,8 @@
         <b>Ice Pick:</b> For climbing sheer icy/slippery slopes.
         <br>
         <b>Crampons:</b> Spiked shoes that are better for traction on icy surfaces.
-    </p>
+        </p>
+    </div>
 </body>
 
 </html>
